# pyformatter

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
formatter/: __init__.py  __main__.py  cli.py  core.py  formatter.py  formatter_logger.py  globals.py  json_formatter.py  logger.py  main.py  registry.py  utils.py  yaml_formatter.py
formatter/formatters/: base_formatter.py  json_formatter.py  toml_formatter.py  xml_formatter.py  yaml_formatter.py
tests/: test.json  test_formatter.py  test_json.py  test_toml.py  test_xml.py  test_yaml.py
tests/output/: test_formatted.yaml
tests/tests_json/: test.json  test1.json  test2.json  test3.json  test4.json  test5.json  test_wrong.json
tests/tests_json/output/: test1_formatted.json  test2_formatted.json  test3_formatted.json  test4_formatted.json  test5_formatted.json
tests/tests_toml/: test.toml  test1.toml  test2.toml  test3.toml  test4.toml
tests/tests_toml/output/: test_formatted.toml
tests/tests_xml/: test.xml  test1.xml  test2.xml  test3.xml  test4.xml
tests/tests_xml/output/: test1_formatted.xml  test2_formatted.xml  test3_formatted.xml  test4_formatted.xml  test_formatted.xml
tests/tests_yaml/: test.yaml  test1.yaml  test2.yaml  test3.yaml  test4.yaml  test5.yaml  test_wrong.yaml
tests/tests_yaml/output/: test1_formatted.yaml  test2_formatted.yaml  test3_formatted.yaml  test4_formatted.yaml  test_formatted.yaml
