[project]
name = "formatter-project"
version = "0.1.0"
description = "A CLI tool to format files. (Supported extensions: .json, .yaml, ...)"
authors = [{name = "Felipe Seiji Inoue", email="felipeinoue@yahoo.com.br"}]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "typer[all]",
    "rich",
    "pyyaml",
    "lxml",
    "tomli-w",
    "toml"
]

[tool.setuptools]
packages = ["formatter"]

[project.scripts]
formatter = "formatter.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"